# pdfka

./: package-lock.json  pyproject.toml  readme.md  start.sh  tailwind.config.js
input/: .example_input.json.swp  example_input.json
pdfka/: __main__.py  cli.py  config.py  live_server.py  pdf_generator.py  template.py  utils.py
templates/: input.css  page_template.html  pdf-print.css  tailwind.css
