[project]
name = "pdfka"
version = "0.1.0"
description = "Create branding PDF files from JSON templates"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "jinja2>=3.1.0",
    "livereload>=2.7.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "watchdog>=4.0.0",
    "websockets>=16.0",
]

[project.scripts]
pdfka = "pdfka.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
